--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         <div class="w-full flex flex-col md:flex-row items-center justify-center md:gap-16">
             <img 
                 src="public/profile.jpeg" 
-                class="w-full md:w-[13%] h-auto border-2 border-green-600 rounded-full"
+                class="w-[80%] md:w-[13%] h-auto border-2 border-green-600 rounded-full"
                 alt="Profile Picture"
             >
         </div>
         <div class="w-full flex flex-row justify-center">
-            <h1 class="text-lg md:text-5xl text-green-600">
+            <h1 class="text-md md:text-5xl text-green-600">
                 Sarah Beatriz Pimenta da Costa
             </h1>
         </div>
-        <div class="w-full flex flex-row justify-center gap-10">
+        <div class="w-full flex flex-col md:flex-row justify-center gap-10">
             <h2 class="flex flex-row items-center text-gray-600 gap-2">
                 <i class="fa-solid fa-envelope text-green-600"></i>
                 sarahbeatrizpimenta@gmail.com
