--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14.jpeg"
@@ -83,7 +83,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (1).jpeg"
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (1).jpeg"
@@ -93,7 +93,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (2).jpeg"
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (2).jpeg"
@@ -103,7 +103,7 @@
         <a
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (3).jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (3).jpeg"
@@ -113,7 +113,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (4).jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.09.14 (4).jpeg"
@@ -123,7 +123,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.28.24.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.28.24.jpeg"
@@ -136,7 +136,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.29.06.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.29.06.jpeg"
@@ -146,7 +146,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.29.53.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.29.53.jpeg"
@@ -156,7 +156,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.30.10.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.30.10.jpeg"
@@ -166,7 +166,7 @@
         <a 
           href="public/certificates/WhatsApp Image 2025-07-16 at 13.31.15.jpeg" 
           target="_blank"
-          class="w-[90%] md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
+          class="w-full md:w-[30%] flex items-center rounded-lg shadow-lg hover:scale-105 duration-300 overflow-hidden cursor-pointer" 
         >
             <img 
               src="public/certificates/WhatsApp Image 2025-07-16 at 13.31.15.jpeg"
